<resources>
    <string name="app_name">eBay Catalog Search</string>
    <string name="keyword" id='keyword'>Enter Keyword</string>
    <string name="min_price">Minimum Price</string>
    <string name="max_price">Maximum Price</string>
    <string name="new_cond"><i>New</i></string>
    <string name="used_cond"><i>Used</i></string>
    <string name="unspecified_cond"><i>Unspecified</i></string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string-array name='sort_by'>
        <item>Best Match</item>
        <item>Price: highest first</item>
        <item>Price + Shipping: Highest First</item>
        <item>Price + Shipping: Lowest First</item>
    </string-array>
    <string name="keyword_label">Keyword</string>
    <string name="price_range_label">Price Range</string>
    <string name="condition_label">Condition</string>
    <string name="sort_by_label">Sort By</string>
    <string name="price_error">Please enter valid price values</string>
    <string name="keyword_error">Please enter mandatory field.</string>
    <string name="itemId">itemId</string>
    <string name="prodTitle">prodTitle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_product">Product</string>
    <string name="category_seller_info">Seller Info</string>
    <string name="category_shipping">Shipping</string>
    <string name="resources">Resources</string>
    <string name="specifications">Specifications</string>
    <string name="prod_features">Product Features</string>
    <string name="seller_info">Seller Information</string>
    <string name="return_policies">Return Policies</string>
    <string name="shipping_info">Shipping Information</string>
    <string name="search_results">Search Results</string>
</resources>